unpackaged/main/default/objects/Maintenance_Request__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chassis No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>