unpackaged/main/default/objects/Maintenance_Request__c/fields/Current_KM_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Current_KM_Hrs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current KM/Hrs</label>
    <length>200</length>
    <type>Text</type>
</CustomField>