unpackaged/main/default/objects/Maintenance_Request__c/fields/Maintenance_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Questionnaire__c</fullName>
    <label>Maintenance Questionnaire</label>
    <referenceTo>Maintenance_Questionnaire__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>