unpackaged/main/default/objects/Maintenance_Request__c/fields/Make_manufacturer_type__c.field-meta.xml
<CustomField>
    <fullName>Make_manufacturer_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Make/manufacturer type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>