unpackaged/main/default/objects/Maintenance_Request__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model /Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>